# state_tierlist

./: .gitignore  README.md  pyproject.toml  state_tierlist.py  util.py
static/: script.js  styles.css
templates/: all_states.html  base.html  index.html  single_state.html  state_map.html  states.html
templates/state_shapes/: AL.html  AR.html  AZ.html  CA.html  CO.html  CT.html  DC.html  DE.html  FL.html  GA.html  HI.html  IA.html  ID.html  IL.html  IN.html  KS.html  KY.html  LA.html  MA.html  MD.html  ME.html  MI.html  MN.html  MO.html  MS.html  MT.html  NC.html  ND.html  NE.html  NH.html  NJ.html  NM.html  NV.html  NY.html  OH.html  OK.html  OR.html  PA.html  RI.html  SC.html  (+10 more)
